# ds-access-control

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Organisational Data Sovereignty p1.md  Two Tier Blockchain Mediated Local-First Access Control.md
.github/workflows/: quint.yml
app/: README.md  package-lock.json  package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
app/src/lib/: api.ts
app/src/lib/components/: Admit.svelte  CreateOrg.svelte  Invite.svelte  Membership.svelte  PersonaList.svelte  Revoke.svelte  StatusBar.svelte
app/src/routes/: +layout.svelte  +page.svelte
docs/phase-1d/: decision.md  gap-matrix.json  gap-matrix.md  gate-0-results.md  lazy-cgka-results.md  spike-comparison.html  spike-keyhive-decision.md  spike-keyhive-report.html  spike-p2panda-decision.md  spike-p2panda-report.html  subcrate-inventory.md
docs/plans/: 2026-05-07-org-members-design.md
docs/superpowers/demo/: two-instance-demo.md  two-laptop-paseo.md
docs/superpowers/plans/: 2026-03-13-covenant-channel.md  2026-03-13-covenant-crypto.md  2026-03-13-covenant-facade.md  2026-03-13-covenant-foundation.md  2026-05-13-ods-phase-1b-stage1-solidity.md  2026-05-13-phase-1d-spike-common-foundation.md  2026-05-21-spike-p2panda-gates.md  2026-05-28-ods-phase-1b-stage2-rust-client.md  2026-05-28-org-members-hyperbridge-fixes.md  2026-06-01-spike-keyhive-gates.md  2026-06-04-ods-phase-1b-stage2-handoff.md  2026-06-04-ods-phase-1b-stage2-subxt-completion.md  2026-06-13-on-chain-client-fuzzing.md  2026-06-15-ods-phase-2-2-chain-integration.md  2026-06-15-ods-phase-2-3-iroh-transport.md  2026-06-15-ods-phase-2-org-node-core.md  2026-06-15-ods-phase-3-item1-stable-id-acl.md  2026-06-15-quint-membership-core-and-mbt.md  2026-06-15-quint-protocol-safety-m2.md  2026-06-16-ods-phase-2-4-tauri-shell.md  2026-06-16-quint-abstract-root-remodel.md
docs/superpowers/specs/: 2026-03-13-covenant-library-design.md  2026-03-13-tlaplus-formal-model-design.md  2026-05-13-ods-phase-1b-design.md  2026-05-13-ods-phase-1d-library-qualification-design.md  2026-05-28-org-members-hyperbridge-review.md  2026-06-04-ods-phase-1b-stage2-subxt-commitment-design.md  2026-06-13-on-chain-client-fuzzing-design.md  2026-06-15-ods-phase-2-poc-design.md  2026-06-15-ods-phase-3-design.md  2026-06-15-quint-protocol-model-design.md  2026-06-16-quint-abstract-root-remodel-design.md
on-chain/: .gitignore  POST_POC.md  README.md  foundry.toml
on-chain-client/: .gitignore  Cargo.toml  README.md
on-chain-client/chainspecs/: README.md
on-chain-client/src/: client.rs  h160.rs  lib.rs  state.rs  types.rs  verify.rs
on-chain-client/src/decode/: dispatch.rs  mod.rs  v_paseo_ah.rs
on-chain-client/tests/: 00_chopsticks_sanity.rs  01_multisig_sanity.rs  off_chain_genesis_ceremony.rs  p_address_is_orgid.rs  regenerate_corpus.rs  reorg_cancels_proposed.rs  scenario_a_full.rs  smoldot_smoke.rs  two_orgs_one_watcher.rs
on-chain-client/tests/common/: chopsticks_fork.rs  chopsticks_reorg.rs  conn.rs  h160_mapper.rs  mod.rs  multisig.rs  proxy.rs  submit.rs
on-chain-client/tests/fuzz_decode_org_state/: fuzz_target.rs
on-chain-client/tests/fuzz_decode_org_state/corpus/: epoch_overflow  epoch_u64_max  valid_epoch_7
on-chain-client/tests/fuzz_event_round_trip/: fuzz_target.rs
on-chain-client/tests/fuzz_parse_revive_event/: fuzz_target.rs
on-chain-client/tests/fuzz_parse_revive_event/corpus/: bad_address_padding  empty_topics  trailing_byte  valid_genesis  valid_root_updated  wrong_topic_count
on-chain-client/tests/fuzz_support/: mod.rs
on-chain/abi/: OrgRegistry.json
on-chain/scripts/: chopsticks-config.yml  chopsticks-sanity.sh  package-lock.json  package.json  sanity-deploy.mjs  wait-for-rpc.mjs
on-chain/src/: OrgRegistry.sol
on-chain/test/: OrgRegistry.t.sol
org-members/: AGENTS.md  Cargo.toml  README.md
org-members/src/: delta.rs  device_trie.rs  error.rs  hasher.rs  lib.rs  node.rs  normalize.rs  smt.rs  trie.rs  types.rs
org-members/tests/: fuzz_tests.rs  integration_test.rs  mbt_conformance.rs
org-node/: Cargo.toml  README.md
org-node/src/: blobs.rs  ceremony.rs  chain.rs  chain_read.rs  envelope.rs  error.rs  ids.rs  keys.rs  lib.rs  sequence.rs  service.rs  store.rs  test_fixtures.rs  verify.rs
org-node/src/chain_write/: calldata.rs  mod.rs  multisig.rs  proxy.rs  submit.rs
org-node/src/transport/: endpoint.rs  mod.rs  wire.rs
org-node/tests/: chain_genesis_e2e.rs  service_stories.rs  transport_handshake.rs
org-node/tests/common/: chopsticks_fork.rs  chopsticks_reorg.rs  conn.rs  mod.rs
org-node/tests/fuzz_envelope_decode/: fuzz_target.rs
org-node/tests/fuzz_verify_against_chain/: fuzz_target.rs
quint/: .gitignore  README.md  membership.qnt  membership_mbt.qnt  ods_instances.qnt  protocol.qnt
spike-common/: Cargo.toml  README.md
spike-common/scenarios/: gating.md  org_pseudo_group.md  revocation.md
spike-common/src/: identity.rs  lib.rs  report.rs  resolver.rs  scenarios.rs  stub_trie.rs
spike-common/tests/: fixtures_integration.rs  report_integration.rs  stub_trie_integration.rs
spike-keyhive/: Cargo.toml
spike-keyhive/src/: adapter.rs  lib.rs  s1_stable_id_acl.rs  s2_membership_intercept.rs  s3_cgka_rotation.rs  s4_org_pseudo_group.rs  s5_p2p_policy.rs
spike-keyhive/src/evidence/: s0_wasm.md  s1.md  s2.md  s3.md  s4.md  s5.md
spike-keyhive/tests/: l2_g1.rs  l3_gating.rs  l3_lazy_onboarding.rs  l3_org_pseudo_group.rs  l3_revocation.rs
spike-p2panda/: Cargo.toml
spike-p2panda/src/: lib.rs  s1_stable_id_acl.rs  s2_membership_intercept.rs  s3_cgka_rotation.rs  s4_org_pseudo_group.rs  s5_p2p_policy.rs
spike-p2panda/src/evidence/: s0_wasm.md  s1.md  s2.md  s3.md  s4.md  s5.md
spike-p2panda/tests/: l1_p2panda_auth.rs  l1_p2panda_auth_intercept.rs  l1_p2panda_encryption.rs  l1_p2panda_spaces.rs  l1_p2panda_sync.rs  l2_g1.rs  l2_g2.rs  l2_g3.rs  l2_g4.rs  l2_g5.rs  l3_gating.rs  l3_org_pseudo_group.rs  l3_revocation.rs
