[workspace]
resolver = "2"
members = [
    "org-members",
    "org-node",
    "spike-common",
    "spike-keyhive",
    "spike-p2panda",
]
# on-chain-client declares its own [workspace] and is intentionally outside
# this workspace. It is used as a path dependency by org-node (behind the
# `chain` feature). Excluding it here prevents the "multiple workspace
# roots" error when Cargo traverses the directory tree.
exclude = [
    "on-chain-client",
]

[workspace.package]
edition = "2021"
rust-version = "1.81"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
