[package]
name = "spike-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Shared contract for ODS Phase 1.d library-qualification spikes"

[features]
default = ["std", "serde"]
std = ["serde?/std", "postcard?/use-std", "ed25519-dalek/std"]
serde = ["dep:serde", "dep:postcard", "ed25519-dalek/serde"]
json = ["dep:serde_json"]

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }
thiserror = { version = "2", default-features = false }
serde_json = { version = "1", optional = true }

[[bin]]
name = "gap-update"
path = "src/bin/gap-update.rs"
required-features = ["std", "serde", "json"]

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
serde_json = "1"
